--- a/applcation-default.properties
+++ b/applcation-default.properties
@@ -1,5 +1,9 @@
-spring.application.name=config_default
-eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
-eureka.client.register-with-eureka= true
-eureka.client.fetch-registry= true
-eureka.instance.prefer-ip-address=true
+spring.application.name=configDefault
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url:jdbc:mysql://${DB_HOST:localhost}/$DB_NAME:CustomerManagementDb}?createDatabaseIfNotExist=true&all
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
